# genesis_lr

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  requirements_gym.txt  setup.py
docs/: conf.py  index.md  requirecements.txt
docs/source/: conf.py  index.md
docs/source/user_guide/: index.md
docs/source/user_guide/blind_locomotion/: explicit_estimator.md  (+2 more)
docs/user_guide/: index.md
legged_gym/: __init__.py
legged_gym/envs/: __init__.py
legged_gym/envs/base/: legged_robot.py  legged_robot_config.py  legged_robot_nav.py  legged_robot_nav_config.py
legged_gym/envs/bipedal_walker/: bipedal_walker_config.py
legged_gym/envs/go2/: go2.py  go2_config.py
legged_gym/envs/tron1_pf/: tron1_pf.py  tron1_pf_config.py
legged_gym/envs/tron1_sf/: tron1_sf.py  tron1_sf_config.py
legged_gym/scripts/: play.py  play_ee.py  play_gait.py  play_quad.py  play_quad_deploy.py  play_ts.py  play_waq.py  play_wtw.py  train.py
legged_gym/scripts/evaluate/: evaluate_constraint_violation.py
legged_gym/simulator/: simulator.py
legged_gym/utils/: constraint_manager.py  helpers.py  logger.py  math_utils.py  terrain.py
rsl_rl/algorithms/: __init__.py  ppo_dreamwaq.py  ppo_ee.py  ppo_ts.py
rsl_rl/modules/: __init__.py  actor_critic.py  actor_critic_dreamwaq.py  actor_critic_ee.py  actor_critic_ts.py  vae.py
rsl_rl/runners/: __init__.py  dreamwaq_runner.py  on_policy_runner.py  ts_runner.py
rsl_rl/storage/: __init__.py  rollout_storage_dreamwaq.py  rollout_storage_ee.py
test_resources/gait_reward_type/: gait_reward_type.md
(+30 files in other folders)
